[package]
name = "cacophoney-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async-related libraries
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"

# error
thiserror = "1.0.58"

# serde
serde = { version = "1.0.0", features = ["derive"] }

# other
arcstr = { version = "1.1.5", features = ["serde"] }