[package]
name = "cacophoney-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async-related libraries
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
futures = "0.3.30"
tower-async = "0.2.0"

# error
thiserror = "1.0.58"

# serde
serde_with = "3.8.1"
serde_json = "1.0.116"
serde_cbor = "0.11.2"
serde = { version = "1.0.0", features = ["derive"] }

# other
scc = "2.1.1"
zeroize = { version = "1.7.0", features = ["derive"] }
arcstr = { version = "1.1.5", features = ["serde"] }

# cryptography
rand = "0.8.5"
time = "0.3.36"
blake3 = "1.5.1"
libsecp256k1 = "0.7.1"